kubernetes/apps/automatic-ripping-machine/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: automatic-ripping-machine
  labels:
    pod-security.kubernetes.io/enforce: privileged
