kubernetes/apps/automatic-ripping-machine/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: automatic-ripping-machine
spec:
  selector:
    app: automatic-ripping-machine
  ports:
    - protocol: TCP
      port: 8080
