kubernetes/apps/automatic-ripping-machine/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: automatic-ripping-machine
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: ingress-nginx-internal
  tls:
    - hosts:
        - arm.immortalkeep.com
      secretName: automatic-ripping-machine-ingress-tls
  rules:
    - host: arm.immortalkeep.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: automatic-ripping-machine
                port:
                  number: 8080
